--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -8,6 +8,7 @@
 		<members>*</members>
 		<name>ApexPage</name>
 	</types>
+	<types>
 		<members>*</members>
 		<name>LightningComponentBundle</name>
 	</types>
